k8s/platform/argocd-config/argocd-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
  namespace: argocd
spec:
  template:
    spec:
      volumes:
        - name: styles
          configMap:
            name: argocd-styles-cm
      containers:
        - name: argocd-server
          volumeMounts:
            - name: styles
              mountPath: /shared/app/custom
