k8s/platform/argocd-config/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        # TODO: Update with a domain and add to Kustomize
        - argocd.<your-domain>
      secretName: argocd-server-tls # re-used here
  rules:
    # TODO: Update with a domain and add to Kustomize
    - host: argocd.<your-domain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
